# parallel_spanner

./: .gitignore  CMakeLists.txt  README.md  bench.sh
benchme/: CMakeLists.txt
benchme/include/: benchme.hh  dumy.hh  dynload.hh  timer.hh
benchme/src/: dynload.cc  main.cc  runner.cc
benchme/test/: greedy_bench.cc  long.cc  parallel_greedy_bench.cc  short.cc
dataset/: c.json  cities-europe.json  converter.py  dummy.csv  europe.csv  json_to_csv.py  json_to_dot.py  out.json  short_dummy.csv  short_us_cities.csn  short_us_cities.csv  us_cities.csv  us_cities.json
src/: global.hh  main.cc
src/graph/: graph.hh
src/greedy/: greedy.cc  greedy.hh
src/loader/: factory.hh  laucher.cc  loader.cc  loader.hh
src/spanner/: greedy.cc  parallel_greeddy.cc  parallel_greedy.cc  rectangle.cc  rectangle.hh  spanner.hh  split_tree.cc  split_tree.hh
